Refactoring code.